# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blastmap"
version = "0.1.1"
description = "Instantly visualize any Python codebase's dependency graph."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rochan Vanam" }]
keywords = ["dependencies", "visualization", "codebase", "graph", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "networkx>=3.0",
    "pyvis>=0.3.2",
    "click>=8.0",
]

[project.scripts]
blastmap = "blastmap.cli:main"

[project.urls]
Homepage = "https://github.com/RochanVanam/blastmap"
Repository = "https://github.com/RochanVanam/blastmap"
Issues = "https://github.com/RochanVanam/blastmap"

[tool.setuptools.packages.find]
where = ["."]
include = ["blastmap*"]